this out.

Added script to convert to/from ICT's Poskanzer Float Map, which I don't
care to support officially due to its machine-dependent byte order.

Fixed bug that caused incorrect reporting of non-surface in set when
mixing meshes and instances.  (Thanks to Jack de Valpine for discovery.)

Fixed innacuracy in calculation of diffuse transmission in the presence
of pure specular (Fresnel reflection) using "trans" material.  Thanks
to Christoph Reinhart for pointing out the error.

Made internal change to tone-mapping library to use structure pointer
rather than stack, making code re-entrant and more up to modern standards.

Added -pd option to handle depth-of-field blur in rpict.  This requires
that the view directon (-vd option) include focal distance information,
which is now preserved by the various view file routines, and reported
by the vwright command.

Added DBLUR variable to ranimate and pmdblur script to handle simultaneous
motion and depth-of-field blurring.  Thanks to Visarc for funding this work.

Added setting of focus distance in rvu ("focus" command) and rholo
('f'/"frame" command).

Changed default remote shell in ranimate to "ssh" rather than "rsh",
which has been abandoned on most Unix systems due to security issues.

Fixed behavior of source primitive using illum with no alternate
material.  These now become transparent so one can see the sky or
light-probe background for use in image-based lighting.  Previously,
the user needed to specify the background glow as the alternate
material for a distant illum source to behave properly.  (This still
works.)

Fixed some minor problems and inconsistencies with 16-bit/channel
TIFF i/o in ra_tiff.

Created mksource program to generate distant sources for improved
image-based lighting with light probes.

Changed ambient calculation so that -ad will not limit recursion
depth, and a minimum of 27 samples will be sent out for each stored
ambient value, or 3 samples if -aa is 0 (caching off).