@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtrace.1,v 1.5 2005/02/16 05:40:07 greg Exp $"
+.\" RCSid "$Id: rtrace.1,v 1.6 2005/04/14 18:04:12 greg Exp $"
 .TH RTRACE 1 10/17/97 RADIANCE
 .SH NAME
 rtrace - trace rays in RADIANCE scene
@@ -105,6 +105,8 @@ s	surface name
 .IP
 m	modifier name
 .IP
+M	material name
+.IP
 If the letter 't' appears in
 .I spec,
 then the fields following will be printed for every ray traced,
@@ -113,24 +115,24 @@ Spawned rays are indented one tab for each level.
 .IP
 Note that there is no space between this option and its argument.
 .TP
-.BI -te \ mat
+.BI -te \ mod
 Append
-.I mat
+.I mod
 to the trace exclude list,
 so that it will not be reported by the trace option
 .I (\-o*t*).
 Any ray striking an object having
-.I mat
+.I mod
 as its modifier will not be reported to the standard output with
 the rest of the rays being traced.
 This option has no effect unless the 't' option has been given as
 part of the output specifier.
-Any number of excluded materials may be given, but each
+Any number of excluded modifiers may be given, but each
 must appear in a separate option.
 .TP
-.BI -ti \ mat
+.BI -ti \ mod
 Add
-.I mat
+.I mod
 to the trace include list,
 so that it will be considered during the indirect calculation.
 The program can use either an include list or an exclude
@@ -139,16 +141,16 @@ list, but not both.
 .BI -tE \ file
 Same as
 .I \-te,
-except read materials to be excluded from
+except read modifiers to be excluded from
 .I file.
 The RAYPATH environment variable determines which directories are
 searched for this file.
-The material names are separated by white space in the file.
+The modifier names are separated by white space in the file.
 .TP
 .BI -tI \ file
 Same as
 .I \-ti,
-except read materials to be included from
+except read modifiers to be included from
 .I file.
 .TP
 .BR \-i
@@ -427,23 +429,23 @@ header of the ambient file.
 .I Getinfo(1)
 may be used to print out this information.
 .TP
-.BI -ae \ mat
+.BI -ae \ mod
 Append
-.I mat
+.I mod
 to the ambient exclude list,
 so that it will not be considered during the indirect calculation.
 This is a hack for speeding the indirect computation by
 ignoring certain objects.
 Any object having
-.I mat
+.I mod
 as its modifier will get the default ambient
 level rather than a calculated value.
-Any number of excluded materials may be given, but each
+Any number of excluded modifiers may be given, but each
 must appear in a separate option.
 .TP
-.BI -ai \ mat
+.BI -ai \ mod
 Add
-.I mat
+.I mod
 to the ambient include list,
 so that it will be considered during the indirect calculation.
 The program can use either an include list or an exclude
@@ -452,16 +454,16 @@ list, but not both.
 .BI -aE \ file
 Same as
 .I \-ae,
-except read materials to be excluded from
+except read modifiers to be excluded from
 .I file.
 The RAYPATH environment variable determines which directories are
 searched for this file.
-The material names are separated by white space in the file.
+The modifier names are separated by white space in the file.
 .TP
 .BI -aI \ file
 Same as
 .I \-ai,
-except read materials to be included from
+except read modifiers to be included from
 .I file.
 .TP
 .BI -me " rext gext bext"
